# action-recognition-via-snn

./: .gitignore  .pre-commit-config.yaml  Code3.ipynb  Code4-rsnn.ipynb  Makefile  Pipfile  README.md  S-CNN-DVS.ipynb  S-CNN-DVS.py  SNN-test1.ipynb  SimpleArtificialNetwork.ipynb  SimpleSpikingNetwork copy.ipynb  SimpleSpikingNetwork.ipynb  artificial_recurrent_nn.ipynb  cache_generator.py  camera-test.ipynb  continue.py  conv_spike_nn.ipynb  data-cleaner_heavy.ipynb  data_augmentation_test.ipynb  data_augmentor.py  data_comparer.ipynb  data_perp.ipynb  gpu_checker.py  jelly-network.ipynb  jelly-network.py  jelly.py  main.py  main_code.ipynb  main_code.py  my_test1.ipynb  my_test2.ipynb  my_test3-NEW.ipynb  my_test3-copy_test6.ipynb  my_test3.ipynb  my_test4_rsnn.ipynb  network_builder.py  notify.py  pyproject.toml  reader.py  (+11 more)
data/: __init__.py  cache_generator.py  data_augmentor.py  spikingjelly_adaptation.py
docs/: tuning_guide.md
examples/: simple_network.py  simple_relu_network.py
ibm_data/: cache_generator.py  data_augmentor.py  reader.py
jelly_core/: neuron.py  surrogate.py
navgesture/: __init__.py  cache_generator.py  read_td_events.py
notebooks/: 01_simple_neuron.ipynb  02_network_framework.ipynb  03_conv_spiking_net.ipynb  conv_spiking_net.ipynb  simple_neural_network.ipynb  simple_spike_network.ipynb  spiking_data.ipynb
s-cnn_based_on_s2net/: S-CNN-DVS.ipynb  S-CNN-voice.ipynb  cache_generator.py  data.py  keras_extra_layers.py  models.py  utils.py
scnn/: __init__.py  conv1d.py  conv2d.py  conv3d.py  conv3d_synapse.py  default_configs.py  dense.py  funny_printer.py  heaviside.py  legacy_dense.py  network.py  optim.py  pool2d.py  readin.py  readout.py  snn.py
scnn/BatchSpike/: conv1d.py  conv2d.py  conv3d.py  conv3d_synapse.py  dense.py  legacy_dense.py  network.py  pool2d.py  readin.py  readout.py
scnn/Spike/: conv1d.py  conv2d.py  conv3d.py  conv3d_synapse.py  dense.py  legacy_dense.py  network.py  pool2d.py  readin.py  readout.py  spiking_neuron_base.py
scnn/StreamSpike/: conv1d_stream.py  conv2d_stream.py  dense_stream.py  network.py  pool2d_stream.py  readin_stream.py  readout_stream.py
spikenet/: dataloader.py  image_to_spike_convertor.py  network.py
spikenet/dataset/: mnist.py  spiking_mnist.py
spikenet/layers/: flattening.py  neuron_base.py  spiking_base.py  spiking_conv2d.py  spiking_dense.py  spiking_pooling.py
spikenet/tools/: configs.py  heaviside.py
src/notebooks/: conv_spiking_net.ipynb  simple_neural_network.ipynb  simple_spike_network.ipynb  spiking_data.ipynb
src/spikenet/: constants.py  functions.py
tests/data/: test_converter.py  test_dataloader.py
tests/functions/: test_heaviside.py  test_pooling_reduction.py  (+1 more)
tools/: notify.py  time_expector.py
(+43 files in other folders)
